--- a/JS/c01/c01.css
+++ b/JS/c01/c01.css
@@ -24,7 +24,7 @@ h1, h3, p {
 h1 {
     margin: 50px 0 0 50px;
     height: 175px;
-    background-image: url("/1.gif");
+    background-image: url("1.gif");
     background-repeat: no-repeat;
     text-indent: -9999px;
     border-top: 1px solid #bcbdc0;
