--- a/JS/c05/btvn.css
+++ b/JS/c05/btvn.css
@@ -1,5 +1,5 @@
 body{
-    background: url("/c05/Ảnh\ chụp\ Màn\ hình\ 2023-10-19\ lúc\ 16.19.22.png");
+    background: url("/Ảnh\ chụp\ Màn\ hình\ 2023-10-19\ lúc\ 16.19.22.png");
     background-repeat: no-repeat;
     background-size: cover;
     margin: 5px;
